--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "author": "Julian Piasecki",
   "license": "MIT",
   "dependencies": {
-    "dayjs": "^1.11.10",
+    "dayjs": "^1.11.11",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "glob": "^10.3.12",
@@ -33,18 +33,19 @@
     "pretty-ms": "^9.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.2.2",
+    "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@eslint/js": "^9.1.1",
     "@types/ms": "^0.7.34",
     "@types/node": "^20.12.7",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
     "consola": "^3.2.3",
-    "eslint": "^8.57.0",
+    "eslint": "^9.1.1",
+    "globals": "^15.1.0",
     "husky": "^9.0.11",
     "prettier": "^3.2.5",
     "tsup": "^8.0.2",
-    "tsx": "^4.7.2",
-    "typescript": "^5.4.5"
+    "tsx": "^4.7.3",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.8.0"
   }
 }
