--- a/package.json
+++ b/package.json
@@ -3,49 +3,40 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "description": "ZenBot is a modern and super-simple Discord bot that brings ease to your server. From quick commands to seamless interactions. ZenBot is designed for effortless enjoyment!",
-  "main": "dist/index.js",
+  "description": "ZenBot is a helpful and friendly Discord Bot that makes managing your server easy and fun.",
+  "main": "./dist/index.js",
   "scripts": {
     "start": "node .",
-    "build": "tsup",
-    "dev": "tsx ./src/index.ts",
-    "dev:watch": "tsx watch ./src/index.ts",
-    "lint": "prettier . --check && eslint .",
-    "format": "prettier . --write",
+    "build": "tsc",
+    "dev": "tsx watch ./src/index.ts",
+    "check": "biome check .",
+    "check:ci": "biome ci .",
+    "format": "biome format . --write",
     "prepare": "husky"
   },
   "repository": "github:piaseckijulian/ZenBot",
-  "keywords": [
-    "discord",
-    "bot",
-    "discord bot",
-    "zenbot",
-    "piaseckijulian"
-  ],
+  "keywords": ["Discord", "Bot", "ZenBot"],
   "author": "Julian Piasecki",
   "license": "MIT",
   "dependencies": {
+    "@t3-oss/env-core": "^0.10.1",
     "dayjs": "^1.11.11",
-    "discord.js": "^14.14.1",
+    "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
-    "glob": "^10.3.12",
+    "glob": "^10.4.2",
     "ms": "^2.1.3",
-    "pretty-ms": "^9.0.0"
+    "pretty-ms": "^9.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@eslint/js": "^9.1.1",
     "@types/ms": "^0.7.34",
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.14.9",
     "consola": "^3.2.3",
-    "eslint": "^9.1.1",
-    "globals": "^15.1.0",
     "husky": "^9.0.11",
-    "prettier": "^3.2.5",
-    "tsup": "^8.0.2",
-    "tsx": "^4.7.3",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^7.8.0"
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.3"
   }
 }
