--- a/biome.json
+++ b/biome.json
@@ -1,18 +1,20 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.9.3/schema.json",
+  "vcs": {
+    "enabled": true,
+    "clientKind": "git",
+    "useIgnoreFile": true
+  },
   "formatter": {
     "enabled": true,
-    "indentStyle": "space",
-    "ignore": ["dist"]
+    "indentStyle": "space"
   },
   "organizeImports": {
-    "enabled": true,
-    "ignore": ["dist"]
+    "enabled": true
   },
   "linter": {
     "enabled": true,
-    "rules": { "recommended": true },
-    "ignore": ["dist"]
+    "rules": { "recommended": true }
   },
   "javascript": {
     "formatter": {
